--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,4 +67,11 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addressListView"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/searchImgBtnMain" />
+
 </RelativeLayout>
