--- a/app/src/main/res/layout/content_activity_map.xml
+++ b/app/src/main/res/layout/content_activity_map.xml
@@ -54,4 +54,49 @@
         android:layout_alignBottom="@+id/editTextSearch"
         android:layout_alignRight="@+id/map"
         android:layout_alignEnd="@+id/map" />
+
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="Normal"
+        android:id="@+id/button"
+        android:layout_alignBottom="@+id/map"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="10dp"
+        android:onClick="normalMapView"/>
+
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="Satellite"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/button"
+        android:layout_toRightOf="@+id/button"
+        android:textSize="10dp"
+        android:onClick="satelliteMapView"/>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="Terrain"
+        android:id="@+id/button3"
+        android:textSize="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/button4"
+        android:layout_toStartOf="@+id/button4"
+        android:onClick="terrainMapView"/>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="Hybrid"
+        android:id="@+id/button4"
+        android:textSize="10dp"
+        android:layout_alignTop="@+id/button3"
+        android:layout_alignRight="@+id/map"
+        android:layout_alignEnd="@+id/map"
+        android:onClick="hybridMapView"/>
 </RelativeLayout>
