Added Search icon button to the keyboard

--- a/app/src/main/res/layout/content_activity_map.xml
+++ b/app/src/main/res/layout/content_activity_map.xml
@@ -27,6 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
+        android:imeOptions="actionSearch"
         android:inputType="textCapWords"
         android:hint="Try Wall Mart, Staples"/>
 
