--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="?android:selectableItemBackground"
-        android:onClick="addItemMain"
+        android:onClick="addButtonClicked"
         android:src="@drawable/ic_add" />
 
     <ImageButton
@@ -69,9 +69,12 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addressListView"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/searchImgBtnMain" />
-
+        android:layout_height="match_parent"
+        android:id="@+id/listView"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="46dp"
+        style="@style/AppTheme.PopupOverlay"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="#9ae0f2" />
 </RelativeLayout>
